Lagt til MappingStrategy tester og endret til å passe ny frontend og forvalter Requests. Fikset en del bugs som oppstod under bestilling, autensiering mot forvalter fungerer nå.